force-app/main/default/objects/Apttus_Config2__AppliedRuleActionInfo__c/Apttus_Config2__AppliedRuleActionInfo__c.object-meta.xml
<CustomObject>
    <description>Rule actions that are applied to the configuration.</description>
    <label>Applied Rule Action Info</label>
    <nameField>
        <label>Applied Rule Action Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applied Rule Action Infos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>