force-app/main/default/objects/Apttus_Config2__AppliedRuleActionInfo__c/fields/Apttus_Config2__AffectedPrimaryNumbers__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AffectedPrimaryNumbers__c</fullName>
    <description>Primary line numbers of the line items added by the rule action</description>
    <label>Affected Primary Numbers</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>