force-app/main/default/objects/Apttus_Config2__AppliedRuleActionInfo__c/fields/Apttus_Config2__AffectedProductIds__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AffectedProductIds__c</fullName>
    <description>List of product ids affected by the rule action.</description>
    <label>Affected Product Ids</label>
    <length>16384</length>
    <type>LongTextArea</type>
</CustomField>