force-app/main/default/objects/Apttus_Config2__AppliedRuleActionInfo__c/fields/Apttus_Config2__AllowedMax__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AllowedMax__c</fullName>
    <description>Max number of products allowed to be selected by this rule</description>
    <label>Allowed Max</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>