force-app/main/default/objects/Apttus_Config2__AppliedRuleActionInfo__c/fields/Apttus_Config2__AutoExecuted__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AutoExecuted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the rule action inclusion or exclusion was automatically executed.</description>
    <label>Auto Executed</label>
    <type>Checkbox</type>
</CustomField>