force-app/main/default/objects/Apttus_Config2__AppliedRuleActionInfo__c/fields/Apttus_Config2__ConstraintRuleActionId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ConstraintRuleActionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>References the constraint rule action</description>
    <label>Constraint Rule Action</label>
    <referenceTo>Apttus_Config2__ConstraintRuleAction__c</referenceTo>
    <relationshipLabel>Applied Rule Action Infos</relationshipLabel>
    <relationshipName>AppliedRuleActionInfos</relationshipName>
    <type>Lookup</type>
</CustomField>