force-app/main/default/objects/Apttus_Config2__AppliedRuleActionInfo__c/fields/Apttus_Config2__CriteriaFields__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CriteriaFields__c</fullName>
    <description>Criteria fields affected</description>
    <label>Criteria Fields</label>
    <length>8096</length>
    <type>LongTextArea</type>
</CustomField>