force-app/main/default/objects/Apttus_Config2__AppliedRuleActionInfo__c/fields/Apttus_Config2__HideMessage__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__HideMessage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the user has chosen to hide the message</description>
    <label>Hide Message</label>
    <type>Checkbox</type>
</CustomField>