force-app/main/default/objects/Apttus_Config2__AppliedRuleActionInfo__c/fields/Apttus_Config2__Ignored__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Ignored__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the user wants to ignore to rule action. Only warning type rule action can be ignored</description>
    <label>Ignored</label>
    <type>Checkbox</type>
</CustomField>