force-app/main/default/objects/Apttus_Config2__AppliedRuleActionInfo__c/fields/Apttus_Config2__IsPrompt__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__IsPrompt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tracks whether to prompt action message.</description>
    <label>IsPrompt</label>
    <type>Checkbox</type>
</CustomField>