force-app/main/default/objects/Apttus_Config2__AppliedRuleActionInfo__c/fields/Apttus_Config2__IsTargetPrimaryLine__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__IsTargetPrimaryLine__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the include or exclude products should be present in the shopping cart as primary lines.</description>
    <label>Is Target Primary Line</label>
    <type>Checkbox</type>
</CustomField>