force-app/main/default/objects/Apttus_Config2__AppliedRuleActionInfo__c/fields/Apttus_Config2__Pending__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Pending__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the rule action is pending user action.</description>
    <label>Pending</label>
    <type>Checkbox</type>
</CustomField>