force-app/main/default/objects/Apttus_Config2__AppliedRuleActionInfo__c/fields/Apttus_Config2__RequiredMin__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RequiredMin__c</fullName>
    <description>Minimum count of products required to satisfy the rule</description>
    <label>Required Min</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>