force-app/main/default/objects/Apttus_Config2__AppliedRuleActionInfo__c/fields/Apttus_Config2__SuggestedProductIds__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__SuggestedProductIds__c</fullName>
    <description>Product suggested by rule action definition to be included in the cart</description>
    <label>Suggested Product Ids</label>
    <length>16384</length>
    <type>LongTextArea</type>
</CustomField>