force-app/main/default/objects/Apttus_Config2__AppliedRuleActionInfo__c/fields/Apttus_Config2__TargetBundleNumber__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__TargetBundleNumber__c</fullName>
    <description>The parent bundle number of the included or excluded products. For  non option products it is set as zero which represents the cart as the parent.</description>
    <label>Target Bundle Number</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>