force-app/main/default/objects/Apttus_Config2__AppliedRuleActionInfo__c/fields/Apttus_Config2__TriggeringPrimaryNumbers__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__TriggeringPrimaryNumbers__c</fullName>
    <description>Primary numbers of the line items that has triggered the rule action.</description>
    <label>Triggering Primary Numbers</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>